--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -290,7 +290,7 @@
                 <!--Professional-->
                 <div class="work-block work-prof active">
                     <div class="work-card">
-                        <a href="./projects.html" class="work-card_pill" id="mds">
+                        <a class="work-card_pill">
                             <div class="work-header">
                                 <p>01. Design System</p>
                                 <p class="work-tag">Design System Library <span class="exp-dot"></span> MTX Group Inc.
@@ -331,7 +331,7 @@
                         </div>
                     </div>
                     <div class="work-card">
-                        <a href="" class="work-card_pill">
+                        <a class="work-card_pill">
                             <div class="work-header">
                                 <p>02. Division of Vocational Rehabilitation</p>
                                 <p class="work-tag">Case Management <span class="exp-dot"></span> MTX Group Inc. <span
@@ -367,7 +367,7 @@
                         </div>
                     </div>
                     <div class="work-card">
-                        <a href="" class="work-card_pill">
+                        <a class="work-card_pill">
                             <div class="work-header">
                                 <p>03. Consumer and Business Services</p>
                                 <p class="work-tag">Residential Bonds <span class="exp-dot"></span> MTX Group Inc. <span
@@ -404,7 +404,7 @@
                         </div>
                     </div>
                     <div class="work-card">
-                        <a href="" class="work-card_pill">
+                        <a  class="work-card_pill">
                             <div class="work-header">
                                 <p>04. Intake Request (Internal)</p>
                                 <p class="work-tag">Internal Operations <span class="exp-dot"></span> MTX Group Inc.
@@ -443,7 +443,7 @@
                 <!--Designs-->
                 <div class="work-block work-design">
                     <div class="work-card">
-                        <a href="./projects.html" class="work-card_pill">
+                        <a  class="work-card_pill">
                             <div class="work-header">
                                 <p>01. Buddy</p>
                                 <p class="work-tag">Learn Together <span class="exp-dot"></span> Independent
@@ -457,7 +457,7 @@
                         </div>
                     </div>
                     <div class="work-card">
-                        <a href="./projects.html" class="work-card_pill">
+                        <a  class="work-card_pill">
                             <div class="work-header">
                                 <p>02. BusBay</p>
                                 <p class="work-tag">Bus Bay – Find. Ride. Go. <span class="exp-dot"></span> Independent
@@ -471,7 +471,7 @@
                         </div>
                     </div>
                     <div class="work-card">
-                        <a href="./projects.html" class="work-card_pill">
+                        <a class="work-card_pill">
                             <div class="work-header">
                                 <p>03. Easy Book</p>
                                 <p class="work-tag">Book Rentals App <span class="exp-dot"></span> Independent
@@ -488,7 +488,7 @@
                 <!--Personal-->
                 <div class="work-block work-per">
                     <div class="work-card">
-                        <a href="./projects.html" class="work-card_pill">
+                        <a class="work-card_pill">
                             <div class="work-header">
                                 <p>01. Ticzy</p>
                                 <p class="work-tag">Event Booking platform <span class="exp-dot"></span> Independent
@@ -504,7 +504,7 @@
                         </div>
                     </div>
                     <div class="work-card">
-                        <a href="" class="work-card_pill">
+                        <a  class="work-card_pill">
                             <div class="work-header">
                                 <p>02. Ecet Solutions</p>
                                 <p class="work-tag">Event Booking platform <span class="exp-dot"></span> Independent
@@ -520,7 +520,7 @@
                         </div>
                     </div>
                     <div class="work-card">
-                        <a href="" class="work-card_pill">
+                        <a  class="work-card_pill">
                             <div class="work-header">
                                 <p>03. T Blog</p>
                                 <p class="work-tag">Telangana Tourism <span class="exp-dot"></span> Independent
@@ -536,7 +536,7 @@
                         </div>
                     </div>
                     <div class="work-card">
-                        <a href="" class="work-card_pill">
+                        <a  class="work-card_pill">
                             <div class="work-header">
                                 <p>04. Find Lecturer</p>
                                 <p class="work-tag">Guest Lecturer platform <span class="exp-dot"></span> Independent
