--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -7,8 +7,8 @@
     <title>Sai Krishna Kandagatla</title>
     <link rel="stylesheet" href="./Design/styles/main.css" />
     <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
-    <link href="./Design/media/Saikrishna.svg" rel="apple-touch-icon">
-    <link href="./Design/media/Saikrishna.svg" rel="icon" sizes="64*64">
+    <link href="./Design/media/Saikrishna.png" rel="apple-touch-icon">
+    <link href="./Design/media/Saikrishna.png" rel="icon" sizes="64*64">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
@@ -22,7 +22,7 @@
             <div class="top-line"></div>
             <header>
                 <a href="" class="logo">
-                    <img src="./Design/media/Saikrishna.svg" />
+                    <img src="./Design/media/Saikrishna.png" />
                     <div class="logo-content">
                         <p class="logo-title">Sai Krishna Kandagatla</p>
                         <p class="logo-tag">
@@ -93,7 +93,7 @@
                 <div class="about-card">
                     <div class="about-details">
                         <div class="about-img">
-                            <img src="./Design/media/Saikrishna.svg" />
+                            <img src="./Design/media/Saikrishna.png" />
                         </div>
                         <div>
                             <p>Sai Krishna Kandagatla</p>
