--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -22,7 +22,9 @@
             <div class="top-line"></div>
             <header>
                 <a href="" class="logo">
-                    <img src="./Design/media/Saikrishna.png" />
+                    <p style="width: 48px; height:48px">
+                         <img src="./Design/media/Saikrishna.png" style="max-width: 100%;"/>
+                    </p>
                     <div class="logo-content">
                         <p class="logo-title">Sai Krishna Kandagatla</p>
                         <p class="logo-tag">
