--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -72,8 +72,6 @@
         <div class="container">
             <div class="hero-content">
                 <p class="wish-tag">
-                    <!-- <span>నమస్తే [Namaste] &#128591;</span> <br />
-                    <span>people..!</span> -->
                     <span>Hello I am,</span>
                 </p>
                 <h1>UI/UX designer & Front end developer</h1>
@@ -99,11 +97,10 @@
                         </div>
                         <div>
                             <p>Sai Krishna Kandagatla</p>
-                            <p>UI/ UX Consultant</p>
+                            <p>UI/UX designer & Front end developer</p>
                             <p>Hyderabad, Telangana, India</p>
                         </div>
                         <div class="portfolio-social">
-                            <!-- <p><em>Follow me on</em></p> -->
                             <div class="portfolio-media">
                                 <a href="https://www.linkedin.com/in/sai-krishna-kandagatla-b79063170">
                                     <i class="fa-brands fa-linkedin-in"></i>
@@ -161,15 +158,6 @@
                                 </p>
                             </div>
                         </div>
-                        <!-- <div class="services-card">
-                            <div class="services-card_img">
-                                <img src="./Design/media/accessibility.png" class="" />
-                            </div>
-                            <div>
-                                <h2>Accessibility</h2>
-                                <p>Follows A11Y best practices to make applications accessible.</p>
-                            </div>
-                        </div> -->
                     </div>
                 </div>
                 <div class="about-more">
@@ -278,7 +266,6 @@
     </section>
     <section class="work-section" id="work">
         <div class="container">
-            <!-- <div class="top-line"></div> -->
             <div class="work-container">
                 <div class="head-flex">
                     <span class="head-dot"></span>
