--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -74,11 +74,10 @@
                 <p class="wish-tag">
                     <span>Hello I am,</span>
                 </p>
-                <h1>UI/UX designer & Front end developer</h1>
+                <h1>UI/UX designer & Developer</h1>
                 <p class="intro-tag">Crafting extraordinary digital experiences through human-centered design,
                     shaping usable products for seamless interactions.</p>
-                <a href="./Design/media/SaiKrishna_Resume.pdf" class="look-resume" target="_blank">Look over my
-                    resume</a>
+                <a href="./Design/media/SaiKrishna_Resume.pdf" class="look-resume" target="_blank">Resume</a>
             </div>
             <div class="top-line"></div>
         </div>
@@ -97,7 +96,7 @@
                         </div>
                         <div>
                             <p>Sai Krishna Kandagatla</p>
-                            <p>UI/UX designer & Front end developer</p>
+                            <p>UI/UX designer & Developer</p>
                             <p>Hyderabad, Telangana, India</p>
                         </div>
                         <div class="portfolio-social">
