--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -77,7 +77,10 @@
                 <h1>UI/UX designer & Developer</h1>
                 <p class="intro-tag">Crafting extraordinary digital experiences through human-centered design,
                     shaping usable products for seamless interactions.</p>
-                <a href="./Design/media/SaiKrishna_Resume.pdf" class="look-resume" target="_blank">Resume</a>
+                <div class="hero-buttons">
+                    <a href="./Design/media/SaiKrishna_Resume.pdf" class="look-resume" target="_blank">Resume</a>
+                    <a href="#work" class="look-work" target="_blank">Browse my Work</a>
+                </div>
             </div>
             <div class="top-line"></div>
         </div>
