--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -79,7 +79,7 @@
                     shaping usable products for seamless interactions.</p>
                 <div class="hero-buttons">
                     <a href="./Design/media/SaiKrishna_Resume.pdf" class="look-resume" target="_blank">Resume</a>
-                    <a href="#work" class="look-work" target="_blank">Browse my Work</a>
+                    <a href="#work" class="look-work">Browse my Work</a>
                 </div>
             </div>
             <div class="top-line"></div>
