--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -74,7 +74,7 @@
                 <p class="wish-tag">
                     <span>Hello I am,</span>
                 </p>
-                <h1>UI/UX designer & Developer</h1>
+                <h1>UI/UX Designer & Developer</h1>
                 <p class="intro-tag">Crafting extraordinary digital experiences through human-centered design,
                     shaping usable products for seamless interactions.</p>
                 <div class="hero-buttons">
@@ -99,7 +99,7 @@
                         </div>
                         <div>
                             <p>Sai Krishna Kandagatla</p>
-                            <p>UI/UX designer & Developer</p>
+                            <p>UI/UX Designer & Developer</p>
                             <p>Hyderabad, Telangana, India</p>
                         </div>
                         <div class="portfolio-social">
