--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -143,7 +143,7 @@
                                 <img src="./Design/media/design.png" class="" />
                             </div>
                             <div>
-                                <h2>UI/UX design</h2>
+                                <h2>UI/UX Design</h2>
                                 <p>From wireframes to prototypes, I ensure every detail enhances the user experience
                                     while
                                     aligning with your brand's vision.</p>
